helper ParseJWTwithHMAC which also validates
